--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 jsonify==0.5
 MarkupSafe==1.1.1
-numpy==1.18.5
-pandas==1.1.2
-scikit-learn==0.23.2
+numpy>=1.18.5
+pandas>=1.1.2
+scikit-learn>=0.23.2
 scipy>=1.4.1
 Werkzeug==1.0.1
